--- a/src/assets/_custom.scss
+++ b/src/assets/_custom.scss
@@ -6,7 +6,7 @@
 // Color system
 
 $white: #fff !default;
-$gray-100: #f8f9fa !default;
+$gray-100: #f6f6f6 !default;
 $gray-200: #e9ecef !default;
 $gray-300: #dee2e6 !default;
 $gray-400: #ced4da !default;
