some bug fixes, but also failed at implementing 'collectAll', might need custom batch functions instead of overloading the current one

--- a/src/assets/_custom.scss
+++ b/src/assets/_custom.scss
@@ -154,3 +154,11 @@ $enable-shadows: true;
 // @import "./node_modules/bootstrap-vue/src/components/table/index";
 // @import "./node_modules/bootstrap-vue/src/components/toast/index";
 // @import "./node_modules/bootstrap-vue/src/components/tooltip/index";
+
+pre {
+  margin-bottom: 0;
+}
+
+p {
+  margin-bottom: 0;
+}
